flonest/k8s/base/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flonest-mongo
  namespace: flonest
spec:
  selector:
    app: flonest-mongo
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
